--- a/WebMonitoring/WebMonitoring/packages.config
+++ b/WebMonitoring/WebMonitoring/packages.config
@@ -10,6 +10,8 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NSubstitute" version="1.10.0.0" targetFramework="net452" />
+  <package id="NUnit" version="3.6.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Quartz" version="2.5.0" targetFramework="net452" />
   <package id="Serilog" version="2.4.0" targetFramework="net452" />
